--- a/public/courses/stat220/week8/index.html
+++ b/public/courses/stat220/week8/index.html
@@ -53,7 +53,8 @@
     
   
   <meta name="description" content="Day 20 Slides (html)
-Day 21 Slides (html)" />
+Day 21 Slides (html)
+Day 22 Slides (html)" />
 
   
   <link rel="alternate" hreflang="en-us" href="/courses/stat220/week8/" />
@@ -298,7 +299,8 @@ Day 21 Slides (html)" />
   <meta property="og:url" content="/courses/stat220/week8/" />
   <meta property="og:title" content="Week 8 | Deepak Bastola" />
   <meta property="og:description" content="Day 20 Slides (html)
-Day 21 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
+Day 21 Slides (html)
+Day 22 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" />
     <meta property="twitter:image" content="/media/icon_hua2ec155b4296a9c9791d015323e16eb5_11927_512x512_fill_lanczos_center_3.png" /><meta property="og:locale" content="en-us" />
   
     
@@ -804,6 +806,7 @@ Day 21 Slides (html)" /><meta property="og:image" content="/media/icon_hua2ec155
           <div class="article-style">
             <p>Day 20 Slides (<a href="/stat220/Day20.html" target="_blank">html</a>)</p>
 <p>Day 21 Slides (<a href="/stat220/Day21.html" target="_blank">html</a>)</p>
+<p>Day 22 Slides (<a href="/stat220/Day22.html" target="_blank">html</a>)</p>
 
           </div>
 
