--- a/public/stat220/Day22.html
+++ b/public/stat220/Day22.html
@@ -44,9 +44,9 @@ class: title-slide, middle
 
 # .fancy[Model Accuracy and Evaluation]
 
-### .fancy[Spring 2023]
+### .fancy[Stat 220]
 
- May 17 2023
+ February 22 2024
 
 
 ---
@@ -129,10 +129,9 @@ class: middle
 
 ```r
 set.seed(123) # set seed for reproducibility
-
 # Prepare the raw dataset
 fire_raw &lt;- fire %&gt;% select(temperature, isi, classes)
-
+# split the data randomly into training and testing set, 75-25
 fire_split &lt;- initial_split(fire_raw, prop = 0.75) 
 ```
 
@@ -154,7 +153,7 @@ fire_split &lt;- initial_split(fire_raw, prop = 0.75)
  8          31   2.5 not fire
  9          34   3   not fire
 10          33  14.2 fire    
-# … with 172 more rows
+# ℹ 172 more rows
 ```
 ]
 
@@ -177,7 +176,7 @@ fire_split &lt;- initial_split(fire_raw, prop = 0.75)
  8          32   7.6 fire    
  9          32   2.2 not fire
 10          29   1.1 not fire
-# … with 51 more rows
+# ℹ 51 more rows
 ```
 ]
 
@@ -284,7 +283,7 @@ class: middle
 
 ```r
 test_features &lt;- fire_test %&gt;% select(temperature, isi) 
-fire_pred &lt;- predict(fire_fit, test_features)
+fire_pred &lt;- predict(fire_fit, test_features, type = "raw")
 fire_results &lt;- fire_test %&gt;% 
   select(classes) %&gt;% 
   bind_cols(predicted = fire_pred)
@@ -307,69 +306,71 @@ knitr::kable(fire_results)
 
 
 
-|classes  |.pred_class |
-|:--------|:-----------|
-|not fire |not fire    |
-|not fire |not fire    |
-|fire     |fire        |
-|not fire |not fire    |
-|not fire |not fire    |
-|not fire |not fire    |
-|fire     |fire        |
-|fire     |fire        |
-|not fire |not fire    |
-|not fire |not fire    |
-|not fire |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|not fire |not fire    |
-|not fire |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|not fire |not fire    |
-|not fire |not fire    |
-|not fire |not fire    |
-|not fire |not fire    |
-|not fire |not fire    |
-|not fire |not fire    |
-|not fire |not fire    |
-|fire     |fire        |
-|not fire |not fire    |
-|not fire |not fire    |
-|not fire |not fire    |
-|not fire |not fire    |
-|fire     |fire        |
-|not fire |not fire    |
-|not fire |not fire    |
-|fire     |fire        |
-|not fire |not fire    |
-|not fire |not fire    |
-|fire     |fire        |
-|not fire |not fire    |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|not fire |not fire    |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|fire     |fire        |
-|not fire |not fire    |
-|fire     |fire        |
-|not fire |not fire    |
+|classes  |predicted |
+|:--------|:---------|
+|not fire |not fire  |
+|not fire |not fire  |
+|fire     |fire      |
+|not fire |not fire  |
+|not fire |not fire  |
+|not fire |not fire  |
+|fire     |fire      |
+|fire     |fire      |
+|not fire |not fire  |
+|not fire |not fire  |
+|not fire |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|not fire |not fire  |
+|not fire |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|not fire |not fire  |
+|not fire |not fire  |
+|not fire |not fire  |
+|not fire |not fire  |
+|not fire |not fire  |
+|not fire |not fire  |
+|not fire |not fire  |
+|fire     |fire      |
+|not fire |not fire  |
+|not fire |not fire  |
+|not fire |not fire  |
+|not fire |not fire  |
+|fire     |fire      |
+|not fire |not fire  |
+|not fire |not fire  |
+|fire     |fire      |
+|not fire |not fire  |
+|not fire |not fire  |
+|fire     |fire      |
+|not fire |not fire  |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|not fire |not fire  |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|fire     |fire      |
+|not fire |not fire  |
+|fire     |fire      |
+|not fire |not fire  |
+
+
 ]
 
 ---
@@ -388,7 +389,7 @@ class: action, middle
 .pull-right-60[
 &lt;br&gt;
 .bq[
-- Get the class activity 22.Rmd file from  [moodle](https://moodle.carleton.edu/course/view.php?id=41417) 
+- Get the class activity 22.Rmd file from  [moodle](https://moodle.carleton.edu/course/view.php?id=43045) 
 - Let's work on group activity 1 together
 ]
 
@@ -396,9 +397,9 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_e65c6cbb" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_0de8de37" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
 ---
@@ -518,7 +519,7 @@ background-size: 60%
 
 ## Performance metrics
 
-
+.pull-left[
 .bq[Common metrics include:
 
 - accuracy
@@ -526,23 +527,22 @@ background-size: 60%
 - specificity
 - positive predictive value (PPV)
 ]
+]
 
+.pull-right[
 
 
 
 .font120[
-
-```r
-conf_mat(fire_results, truth = classes, estimate = predicted)
-          Truth
-Prediction fire not fire
-  fire       61        2
-  not fire    6       53
-```
+&lt;img src="Day22_files/figure-html/unnamed-chunk-19-1.svg" width="100%" /&gt;
+]
 ]
 
 
-
+```r
+# code
+conf_mat(fire_results, truth = classes, estimate = predicted) %&gt;%  autoplot()
+```
 
 ---
 
@@ -691,7 +691,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_718f0e58" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_601aecae" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -726,7 +726,7 @@ metrics
 
 
 
-&lt;img src="Day22_files/figure-html/unnamed-chunk-30-1.svg" width="90%" style="display: block; margin: auto;" /&gt;
+&lt;img src="Day22_files/figure-html/unnamed-chunk-31-1.svg" width="90%" style="display: block; margin: auto;" /&gt;
 
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
