--- a/static/stat120/Day22.html
+++ b/static/stat120/Day22.html
@@ -45,7 +45,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 120]
 
- November 01 2023
+ February 22 2024
 
 ---
 
@@ -204,7 +204,9 @@ We have a test statistic.  What else do we need to perform the hypothesis test?
 - A distribution of the test statistic assuming `\(H_0\)` is true
 ]
 
-&lt;br&gt;
+---
+
+class: middle
 
 .bql[How do we get this? Two options:
 1. Simulation
@@ -303,186 +305,11 @@ class: middle
 
 - Compute the p-value as the area in the tail above the `\(\chi^2\)` statistic, for a `\(\chi^2\)` distribution with   `\(df = (\text{number of categories - 1})\)`.
 
-- Interpret the p-value in context.
+- Interpret the p-value in context and conclude.
 ]
 
 ---
 
-class: middle
-
-# Mendel’s Pea Experiment
-
-.bq[
-Between 1856 and 1863 Gregor Mendel cultivated and tested roughly 29,000 pea plants. This study showed that one in four pea plants was pure-bred recessive, two out of four were hybrid and one out of four were pure-bred dominant. 
-
-Mendel's work was rejected at first and was not widely accepted until after he died. He is now known as the “father of modern genetics
-]
-.footnote[Source: Mendel, Gregor. (1866). Versuche ber Pflanzen-Hybriden. Verh. Naturforsch. Ver. Brünn 4: 3–47 (in English in 1901, Experiments in Plant Hybridization, J. R. Hortic. Soc. 26: 1–32)]
-
----
-
-# Mendel’s Pea Experiment
-
-.pull-left-40[
-&lt;br&gt;
-&lt;center&gt;
-&lt;img src="images/pea.jpg" width="99%" height="75%"&gt;&lt;br&gt;
-&lt;/center&gt;
-
-]
-
-.pull-right-60[
-
-.hljs[
-S, Y: .bold[Dominant] and s, y: .bold[Recessive]
-
-Mate SSYY with ssyy: 1st Generation: all Ss Yy
-]
-
-.hljs.github[
-Mate 1st Generation: `\(\rightarrow\)` 2nd Generation
-
-Phenotype | Theoretical Proportion
-----| ---- 
-Round, Yellow | 9/16 
-Round, Green | 3/16
-Wrinkled, Yellow | 3/16
-Wrinkled, Green | 1/16
-]
-]
-
----
-
-# Mendel’s Pea Experiment
-.hljs[ 
-Phenotype | Theoretical Proportion | Observed Counts
-----| ---- | ---- | ----
-Round, Yellow | 9/16 | 315
-Round, Green | 3/16 | 101
-Wrinkled, Yellow | 3/16 | 108
-Wrinkled, Green | 1/16 | 32
-]
-&lt;br&gt;
-
-.bql[
-Let’s test this data against the null hypothesis of each `\(p_i\)` equal to the theoretical value, based on genetics
-
-`$$H_{0}: p_{1}=9 / 16, p_{2}=3 / 16, p_{3}=3 / 16, p_{4}=1 / 16$$`
-`$$H_{a} : \text{ At least one } p_{i} \text{ is not as specified in } H_{0}$$`
-]
-
----
-
-# Mendel’s Pea Experiment
-
-.pull-left[
-.hljs[
-What is the expected count for round green peas?
-
-A. 0.182
-
-B. 108
-
-C. 104.25
-
-D. 139
-]
-
-&lt;br&gt;
-&lt;details&gt;
-&lt;summary&gt;.red[Click for answer]&lt;/summary&gt;
-.hljs[The correct answer is C. Since (315 + 101 + 108 + 32)* 3/16 = 104.25]
-&lt;/details&gt;
-
-]
-
-.pull-right[
-.hljs[
-Phenotype | Theoretical Proportion | Observed Counts
-----| ---- | ---- | ----
-Round, Yellow | 9/16 | 315
-Round, Green | 3/16 | 101
-Wrinkled, Yellow | 3/16 | 108
-Wrinkled, Green | 1/16 | 32
-]
-]
-
----
-
-# Mendel’s Pea Experiment
-
-
-.pull-left[
-&lt;br&gt;
-.hljs[
-Phenotype | Theoretical Proportion | Observed Counts
-----| ---- | ---- | ----
-Round, Yellow | 9/16 | 315
-Round, Green | 3/16 | 101
-Wrinkled, Yellow | 3/16 | 108
-Wrinkled, Green | 1/16 | 32
-]
-]
-.pull-right[
-.hljs.font90[
-The `\(\chi\)`^2 statistic is the sum of 4 components (because there are 4 categories).  What is the contribution to the `\(\chi\)`^2 statistic from the “Round, Yellow” category?
-
-1. 0.016
-
-2. 1.05
-
-3. 5.21
-
-4. 107.2
-]
-
-&lt;details&gt;
-&lt;summary&gt;.red[Click for answer]&lt;/summary&gt;
-.hljs[The correct answer is A. Since `\(\frac{(315 - 312.75)^2}{312.75}  = 0.016\)`]
-&lt;/details&gt;
-
-]
-
----
-
-# Mendel’s Pea Experiment: `\(\chi^{2}=0.47\)`
-
-.bql.font80[Two options:
-- Simulate a randomization distribution
-- Compare to a `\(\chi^{2}\)` distribution with `\(df = 4-1\)`
-]
-
-.pull-left[
-&lt;center&gt;
-&lt;img src="images/pea_rand1.png" width="99%" height="75%"&gt;&lt;br&gt;
-&lt;/center&gt;
-]
-.pull-right[
-&lt;center&gt;
-&lt;img src="images/pea_rand2.png" width="85%" height="75%"&gt;&lt;br&gt;
-&lt;/center&gt;
-]
-
----
-
-# Mendel’s Pea Experiment
-
-.bq[
-Does this prove Mendel’s theory of genetics?  Or at least prove that his theoretical proportions for pea phenotypes were correct?
-
-1. Yes
-2. No
-]
-
-&lt;br&gt;
-
-&lt;details&gt;
-&lt;summary&gt;.red[Click for answer]&lt;/summary&gt;
-.hljs[The correct answer is No. The .out-t[p-value = 0.925]. The test is inconclusive, so this does not prove Mendel's theory of genetics or his theoretical proportions for pea phenotypes.]
-&lt;/details&gt;
-
-
----
 
 class: action
 
@@ -496,15 +323,15 @@ class: action
 
 &lt;br&gt;
 .bql[
-- Let's go over to the [course helper page](https://stat120-fall23.netlify.app/)
+- Let's go over to the [course helper page](https://stat120-winter24.netlify.app/)
 - Please do the class activity and let me know if you have any questions
 - Feel free to talk to your neighbor
 ]
 ]
 
-<div class="countdown" id="timer_04f99bdd" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_9cf846b0" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
-<code class="countdown-time"><span class="countdown-digits minutes">15</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
+<code class="countdown-time"><span class="countdown-digits minutes">25</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
     </textarea>
