--- a/public/stat220/Day25.html
+++ b/public/stat220/Day25.html
@@ -46,7 +46,7 @@ class: title-slide, middle
 
 ### .fancy[Stat 220]
 
- February 29 2024
+ March 01 2024
 
 ---
 
@@ -591,7 +591,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_286fb757" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_551f4ccc" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
@@ -723,7 +723,7 @@ class: action, middle
 
 ]
 
-<div class="countdown" id="timer_cec1607f" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
+<div class="countdown" id="timer_e07b6c41" data-update-every="1" tabindex="0" style="top:0;right:0;padding:3px 4px;font-size:2em;">
 <div class="countdown-controls"><button class="countdown-bump-down">&minus;</button><button class="countdown-bump-up">&plus;</button></div>
 <code class="countdown-time"><span class="countdown-digits minutes">10</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
